tests/error/apply-value-to-value.uplc
(program 1.0.0 [ [ (lam x x) (con integer 0) ] (con integer 0) ])